--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,12 @@ h1 {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 250%;
 }
+
+.card.customClass,
+.card.customClass .card-header,
+.panel.customClass {
+  background-color: #5bc0de;
+}
+.panel.customClass .panel-body {
+  background-color: lightyellow;
+}
